--- a/views/2.ejs
+++ b/views/2.ejs
@@ -45,6 +45,8 @@
     border: none;
     box-shadow: 0 0 50px hsl(50.35, 100%, 50%);
     /* object-fit: contain; */
+    border-radius: 50px;
+    border: 2px solid hsl(50.35, 100%, 50%);
     }
     a{
     color: #ccc;
