--- a/public/css/left.css
+++ b/public/css/left.css
@@ -63,6 +63,8 @@
     width: 80%;
     height: 80vh;
     border: none;
+    border-radius: 50px;
+    border: 2px solid hsl(50.35, 100%, 50%);
   }
   .button:active {
     margin-left:50px;
@@ -122,7 +124,7 @@
   }
 
   #logo{
-    margin: 50px;
+    margin: 20px;
     width: 200px;
     position: absolute;
     z-index: 3000;
@@ -167,9 +169,54 @@
   right: 100px;
   color: #feb80a;
 }
+
 span{
   align-self: center;
   text-transform: uppercase;
   font-weight: bold;
-  
 }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  #one{
+    right: 0.5%;
+    top: 10%;
+  }
+  #two{
+    right: 13.5%;
+    top:31%;
+  }
+  #three{
+    right: 240px;
+    top:507px;
+  }
+  #four{
+    right: 268px;
+    top:710px;
+  }
+  #a{
+    font-size: 16px;
+    top: 19%;
+    right: 13%;
+  }
+  #b{
+    top: 34%;
+    right: 110px;
+  }
+  #c{
+    top: 53%;
+    right: 75px;
+  }
+  #d{
+    top: 69%;
+    right: 100px;
+  }
+  #img{
+    width: 400px;
+    position: absolute;
+    top: 0;
+    z-index: 400;
+    /* left: 30%; */
+  }
+  #sub1 , #sub2 , #sub3 , #sub4 , #sub5 , #sub6 {
+    display: none;
+  }
+ }
