--- a/views/1.ejs
+++ b/views/1.ejs
@@ -44,6 +44,8 @@
     height: 100%;
     border: none;
     box-shadow: 0 0 50px hsl(50.35, 100%, 50%);
+    border-radius: 50px;
+    border: 2px solid hsl(50.35, 100%, 50%);
     /* object-fit: contain; */
     }
     a{
